--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -31,7 +31,7 @@
         <header class="navbar navbar-expand-md bg-body-tertiary position-fixed w-100 px-5 bg-white " style="box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .4);z-index:3">
             <div class="container-fluid" >
                 <a href="/" class="d-inline align-middle navbar-brand mx-5">
-                    <img class="" src="https://images.ixigo.com/image/upload/flights/5ec11a1c8448987aab73cf8f1cf397ad-volrt.png" alt="ixigo.com" title="ixigo.com" id="ixiLogoImg" width="83" height="39"/>
+                    <img class="" src="~/images/Logo.png" alt="ixigo.com" title="ixigo.com" id="ixiLogoImg" width="120" height="39"/>
                 </a>
                 <button class="navbar-toggler ms-auto me-2  border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
