build booking page

--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/tuongstyle.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/notfound.css" asp-append-version="true"/>
-    <link rel="stylesheet" href="~/css/eticket.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="~/css/eticket.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/booking.css" asp-append-version="true" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
