--- a/Views/ScheduleMaster/DetailDate.cshtml
+++ b/Views/ScheduleMaster/DetailDate.cshtml
@@ -10,7 +10,7 @@
 <title>Schedule Detail</title>
 <!-- Favicon icon-->
 
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 <div class="main-wrapper">
     <!-- navbar vertical -->
     <!-- navbar -->
@@ -366,4 +366,4 @@
         return result;
     }
 </script>
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
