--- a/Views/StationMaster/StationMaster.cshtml
+++ b/Views/StationMaster/StationMaster.cshtml
@@ -26,7 +26,7 @@
 		bottom: 18px;
 	}
 </style>
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 <div class="main-wrapper">
 	<!-- navbar vertical -->
 	<!-- navbar -->
@@ -384,6 +384,6 @@
 		return result;
 	}
 </script>
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
