--- a/Views/UserManager/UserManager.cshtml
+++ b/Views/UserManager/UserManager.cshtml
@@ -15,7 +15,7 @@
 		color: white !important;
 	}
 </style>
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 <div class="main-wrapper">
 	<!-- navbar vertical -->
 	<!-- navbar -->
@@ -248,12 +248,12 @@
 					<!-- page header -->
 					<div class="d-md-flex justify-content-between align-items-center">
 						<div>
-							<h2>Trains</h2>
+							<h2>Users</h2>
 							<!-- breacrumb -->
 							<nav aria-label="breadcrumb">
 								<ol class="breadcrumb mb-0">
 									<li class="breadcrumb-item"><a href="/Admin/Index" class="text-inherit">Dashboard</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Trains</li>
+									<li class="breadcrumb-item active" aria-current="page">Users</li>
 								</ol>
 							</nav>
 						</div>
@@ -374,6 +374,6 @@
 		return result;
 	}
 </script>
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
