--- a/Views/BookingManager/BookingDetail.cshtml
+++ b/Views/BookingManager/BookingDetail.cshtml
@@ -1,20 +1,21 @@
-﻿@model Railway_Group01.Data.Schedule
+﻿@model IEnumerable<Railway_Group01.Data.BookingDetail>
 @{
 	Layout = null;
-	var listRoute = ViewData["listroute"] as List<Railway_Group01.Data.Route>;
-}
 
+}
 <!-- Required meta tags -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta content="Codescandy" name="author">
-<title>Edit Schedule</title>
-
-<!-- main wrapper -->
-<!-- navbar -->
+<title>Booking Details</title>
+<!-- Favicon icon-->
+<style>
+	.colerth {
+		background-color: #EC5B24 !important;
+		color: white !important;
+	}
+</style>
 <partial name="_AdminHeader" />
-
-
 <div class="main-wrapper">
 	<!-- navbar vertical -->
 	<!-- navbar -->
@@ -42,7 +43,7 @@
 						<span class="nav-label">Store Managements</span>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link " href="../dashboard/products.html">
+						<a class="nav-link  active " href="../dashboard/products.html">
 							<div class="d-flex align-items-center">
 								<span class="nav-link-icon"><i class="bi bi-cart"></i></span>
 								<span class="nav-link-text">Products</span>
@@ -50,7 +51,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link  active " href="../dashboard/categories.html">
+						<a class="nav-link " href="../dashboard/categories.html">
 							<div class="d-flex align-items-center">
 								<span class="nav-link-icon"><i class="bi bi-list-task"></i></span>
 								<span class="nav-link-text">Categories</span>
@@ -241,94 +242,85 @@
 
 	<!-- main -->
 	<main class="main-content-wrapper">
-		<!-- container -->
 		<div class="container">
-			<!-- row -->
 			<div class="row mb-8">
 				<div class="col-md-12">
+					<!-- page header -->
 					<div class="d-md-flex justify-content-between align-items-center">
-						<!-- page header -->
 						<div>
-							<h2>Edit Schedule</h2>
+							<h2>Booking Details</h2>
 							<!-- breacrumb -->
 							<nav aria-label="breadcrumb">
 								<ol class="breadcrumb mb-0">
 									<li class="breadcrumb-item"><a href="#" class="text-inherit">Dashboard</a></li>
-									<li class="breadcrumb-item"><a href="#" class="text-inherit">Train Schedule</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Edit Schedule</li>
+									<li class="breadcrumb-item active" aria-current="page">Booking List</li>
+									<li class="breadcrumb-item active" aria-current="page">Booking Details</li>
 								</ol>
 							</nav>
 						</div>
-						<div>
-							<a href="/ScheduleMaster/TrainSchedule" class="btn btn-me">Back to Train Schedule</a>
-						</div>
+						<!-- button -->
+
 					</div>
 				</div>
 			</div>
+			<!-- row -->
 			<div class="row">
-				<div class="col-lg-12 col-12">
+				<div class="col-xl-12 col-12 mb-5">
 					<!-- card -->
-					<div class="card mb-6 shadow border-0">
-						<!-- card body -->
-						<div class="card-body p-6">
-							<h4 class="mb-4 h5 mt-5">Train Schedule Information</h4>
-							<form asp-action="EditTrainSchedule" method="post">
-								<div class="row">
-									<input type="hidden" asp-for="Id"/>
-									<!-- input -->
-									<div class="mb-3 col-lg-6">
-										<label class="form-label">Train Code</label>
-										<select asp-for="Train.Code" class="form-select" asp-items="@ViewBag.listTrain">
-																			
-										</select>
-									</div>
-									<!-- input -->
-									<div class="mb-3 col-lg-6">
-										<label class="form-label">Route Id</label>
-											<select class="form-select" asp-for="Route.Id">
-												@if (listRoute != null)
-												{
-													@foreach (var route in listRoute)
-													{
-														<option value="@route.Id">@route.StartStation.Code to @route.EndStation.Code (@route.Id)</option>
-													}
-												}
-											</select>
-									</div>
-									<!-- input -->
-									<div class="mb-3 col-lg-6">
-										<label class="form-label">Start At</label>
-										<input asp-for="Departure" class="form-control"  />
-									</div>
-									<div class="mb-3 col-lg-6">
-										<label class="form-label">End At</label>
-										<input asp-for=Arrival class="form-control flatpickr"  />
-									</div>
-
-									<div></div>
-									<!-- input -->
-									<!-- input -->
-									<div class="mb-3 col-lg-12">
-										<label class="form-label" id="productSKU">Status</label>
-										<br />
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True" checked />
-											<label class="form-check-label" for="inlineRadio1">Active</label>
-										</div>
-										<!-- input -->
-										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" />
-											<label class="form-check-label" for="inlineRadio2">Disabled</label>
-										</div>
-										<!-- input -->
-									</div>
-
-									<div class="col-lg-12">
-										<input type="submit" class="btn btn-me" value="Edit Schedule" />
-									</div>
+					<div class="card h-100 card-lg">
+						<div class="px-6 py-6">
+							<div class="row justify-content-between">
+								<!-- form -->
+								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
+									<form class="d-flex" role="search">
+										<input class="form-control" type="search" placeholder="Search Booking" aria-label="Search" />
+									</form>
 								</div>
-							</form>
+								<!-- select option -->
 
+							</div>
+						</div>
+						<!-- card body -->
+						<div class="card-body p-0">
+							<!-- table -->
+							<div class="table-responsive">
+								<table class="table table-centered table-hover text-nowrap table-borderless mb-0 table-with-checkbox">
+									<thead class="bg-light">
+										<tr>
+											<th class="colerth">Id</th>
+											<th class="colerth">Seat Id</th>
+											<th class="colerth">Schedule Id</th>
+											<th class="colerth">Booking Id</th>
+										</tr>
+									</thead>
+									@foreach (var item in Model)
+									{
+										<tbody>
+											<tr>
+												<td>
+													@item.Id
+												</td>
+												<td>@item.Seat.Id</td>
+												<td>@item.Schedule.Id</td>
+												<td>@item.Booking.Id</td>
+											</tr>
+										</tbody>
+									}
+
+								</table>
+							</div>
+						</div>
+						<div class="border-top d-md-flex justify-content-between align-items-center px-6 py-6">
+							<span>Showing 1 to 8 of 12 entries</span>
+							<nav class="mt-2 mt-md-0">
+								<ul class="pagination mb-0">
+									<li class="page-item disabled"><a class="page-link" href="#!">Previous</a></li>
+									<li class="page-item"><a class="page-link active" href="#!">1</a></li>
+									<li class="page-item"><a class="page-link" href="#!">2</a></li>
+									<li class="page-item"><a class="page-link" href="#!">3</a></li>
+									<li class="page-item"><a class="page-link" href="#!">Next</a></li>
+								</ul>
+							</nav>
 						</div>
 					</div>
 				</div>
@@ -338,6 +330,5 @@
 </div>
 
 <partial name="_AdminFooter" />
-
 
 
