--- a/Views/DashBoard/DashBoard.cshtml
+++ b/Views/DashBoard/DashBoard.cshtml
@@ -7,7 +7,7 @@
 <meta content="Codescandy" name="author">
 <title>Dashboard Railway</title>
 
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 
 
 <div class="main-wrapper">
