--- a/Views/Route/EditRoute.cshtml
+++ b/Views/Route/EditRoute.cshtml
@@ -13,7 +13,7 @@
 
 <!-- main wrapper -->
 <!-- navbar -->
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 
 
 <div class="main-wrapper">
@@ -326,7 +326,7 @@
 	</main>
 </div>
 
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
 
