--- a/Views/RouteDetail/EditRouteDetail.cshtml
+++ b/Views/RouteDetail/EditRouteDetail.cshtml
@@ -14,7 +14,7 @@
 
 <!-- main wrapper -->
 <!-- navbar -->
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 
 
 <div class="main-wrapper">
@@ -349,7 +349,7 @@
 	</main>
 </div>
 
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
 
