--- a/Views/RouteDetail/RouteDetailList.cshtml
+++ b/Views/RouteDetail/RouteDetailList.cshtml
@@ -16,7 +16,7 @@
 <title>Route Detail</title>
 <!-- Favicon icon-->
 
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 <div class="main-wrapper">
 	<!-- navbar vertical -->
 	<!-- navbar -->
@@ -312,9 +312,9 @@
 												<td>
 													@item.Id
 												</td>
-												<td>@item.DepartureStation.Code</td>
-												<td>@item.ArrivalStation.Code</td>
-												<td>@item.Route.Id</td>
+												<td>@item.DepartureStation.Name</td>
+												<td>@item.ArrivalStation.Name</td>
+												<td>@item.Route.Id (@item.Route.StartStation.Name - @item.Route.EndStation.Name)</td>
 												<td>@item.Distance</td>
 												<td>@item.TravelTime</td>
 												<td>@item.DelayTime</td>
@@ -371,6 +371,6 @@
 		return result;
 	}
 </script>
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
