--- a/Views/Shared/_AdminNavbar.cshtml
+++ b/Views/Shared/_AdminNavbar.cshtml
@@ -12,8 +12,8 @@
 <nav class="navbar-vertical-nav d-none d-xl-block">
 	<div class="navbar-vertical adminNavbar">
 		<div class="px-4 py-5">
-			<a href="/Home/Index" class="navbar-brand">
-				<img src="/images/ixigo.jpg" alt="" width="150px" height="auto"/>
+			<a href="/Railway/Index" class="navbar-brand">
+				<img src="/images/Logo.png" alt="" width="150px" height="auto"/>
 			</a>
 		</div>
 		<div class="navbar-vertical-content flex-grow-1" data-simplebar="">
@@ -26,8 +26,8 @@
 						</div>
 					</a>
 				</li>
-				<li class="nav-item mt-6 mb-3">
-					<span class="nav-label">Store Managements</span>
+				<li class="nav-item mt-6 mb-3 ">
+					<span class="nav-label ">Railway Managements</span>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link " href="/StationMaster/StationMaster">
@@ -62,7 +62,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link " href="/TicketManager/TicketManager">
+					<a class="nav-link " href="/BookingManager/BookingManager">
 						<div class="d-flex align-items-center">
 							<span class="nav-link-icon iconAdminNavbar"><i class="bi bi-ticket"></i></span>
 							<span class="nav-link-text iconAdminNavbar">Booking</span>
