--- a/Views/TrainMaster/TrainMaster.cshtml
+++ b/Views/TrainMaster/TrainMaster.cshtml
@@ -22,7 +22,7 @@
 <title>Train Master</title>
 <!-- Favicon icon-->
 
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 <div class="main-wrapper">
 	<!-- navbar vertical -->
 	<!-- navbar -->
@@ -376,6 +376,6 @@
 		return result;
 	}
 </script>
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
