--- a/Views/UserManager/EditUser.cshtml
+++ b/Views/UserManager/EditUser.cshtml
@@ -12,7 +12,7 @@
 
 <!-- main wrapper -->
 <!-- navbar -->
-<partial name="_Header" />
+<partial name="_AdminHeader" />
 
 
 <div class="main-wrapper">
@@ -321,7 +321,7 @@
 	</main>
 </div>
 
-<partial name="_Footer" />
+<partial name="_AdminFooter" />
 
 
 
