--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -2,8 +2,9 @@
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
-<ul class="nav nav-pills flex-column">
+<ul class="user-dashboard nav nav-pills flex-column">
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.BookingHistoryNavClass(ViewContext)" id="ticket-data" asp-page="./BookingHistory">Booking History</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.BookingHistoryNavClass(ViewContext)" id="booking-history" asp-page="./BookingHistory">Booking history</a></li>
+
 </ul>
