--- a/Views/Shared/_LayoutofTuong.cshtml
+++ b/Views/Shared/_LayoutofTuong.cshtml
@@ -180,7 +180,7 @@
                         </li> *@
                     </ul>
                     <div class="d-flex justify-content-between mt-4">
-                        <a asp-controller="Reservation" asp-action="Booking" class="btn btn-orange">Buy Now</a>
+                        <a asp-controller="Booking" asp-action="Index" class="btn btn-orange">Buy Now</a>
                         <a href="#" class="btn btn-outline-secondary clearCart">Clear Cart</a>
                     </div>
                 </div>
