--- a/Views/Railway/Booking.cshtml
+++ b/Views/Railway/Booking.cshtml
@@ -9,7 +9,7 @@
             @foreach(var item in Model)
             {
                 <li>
-                    @item.Title<br />@item.SeatDetail</li>
+                    @item.Trip<br />@item.SeatDetail</li>
                 
             }
         </ol>
