--- a/Views/Railway/Search.cshtml
+++ b/Views/Railway/Search.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Search";
     Layout = "~/Views/Shared/_LayoutofTuong.cshtml";
-    var now = DateTime.Now;
+    var now = DateTime.Parse("2023-12-05");
     var tenMoreDays = now.AddDays(10);
     var nowString = now.ToString("yyyy-MM-dd");
     var tenMoreDaysString = tenMoreDays.ToString("yyyy-MM-dd");
@@ -252,7 +252,7 @@
                     </button>
                 </div>
             </div>
-            @if (Model.Schedules != null && Model.Schedules.Any())
+            @if (Model.Schedules != null && Model.Schedules.Any() )
             {
                 @foreach (var schedule in Model.Schedules)
                 {
@@ -262,8 +262,14 @@
                                 <div class="d-inline-flex w-100">
                                     <div class="p-3 w-25">
                                         <div class="">
-                                            <a href="" class="h5" style="color: rgb(236, 88, 36); text-decoration: none;">
-                                                <span class="">@schedule.Name</span>
+                                            <a class="h4 text-orange text-decoration-none" 
+                                               asp-controller="Railway"
+                                               asp-action="TrainDetail"
+                                               asp-route-traincode="@schedule.TrainCode"
+                                               asp-route-departure="@schedule.Route.RouteDetails.FirstOrDefault().DepartureStationId"
+                                               asp-route-arrival="@schedule.Route.RouteDetails.LastOrDefault().ArrivalStationId"
+                                               asp-route-time="@Model.StartDate">
+                                                @schedule.Name
                                             </a>
                                         </div>
                                     </div>
@@ -271,12 +277,12 @@
                                         <div class="row w-md-50">
                                             <div class="col-3 col-lg-2 mx-auto me-0">
                                                 <div class="">
-                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@schedule.Route.RouteDetails.First().DepartureStation.Name</a>
+                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@schedule.Route.RouteDetails.FirstOrDefault().DepartureStation.Name</a>
                                                     <div class="c-tooltip bottom">
                                                         <div class="tip"></div>
                                                     </div>
                                                 </div>
-                                                <div class="time">@schedule.Departure.ToString("hh:mm tt")</div>
+                                                <div class="time">@schedule.Departure.ToString("HH:mm")</div>
                                                 <div class="date">@schedule.Departure.ToString("ddd, dd MMM")</div>
                                             </div>
                                             <div class="col-3 d-flex flex-column align-items-center ">
@@ -290,12 +296,12 @@
                                             </div>
                                             <div class="col-3 col-lg-2 mx-auto ms-0">
                                                 <div class="">
-                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@schedule.Route.RouteDetails.Last().ArrivalStation.Name</a>
+                                                    <a class="text-decoration-none fw-bold" style="color: rgb(236, 88, 36);" href="">@schedule.Route.RouteDetails.LastOrDefault().ArrivalStation.Name</a>
                                                     <div class="c-tooltip bottom">
                                                         <div class="tip"></div>
                                                     </div>
                                                 </div>
-                                                <div class="time">@schedule.Arrival.ToString("hh:mm tt")</div>
+                                                <div class="time">@schedule.Arrival.ToString("HH:mm")</div>
                                                 <div class="date">@schedule.Arrival.ToString("ddd, dd MMM")</div>
                                             </div>
                                         </div>
@@ -304,24 +310,20 @@
                                 <div class=" d-flex flex-row justify-content-around align-items-center my-4 multiple-class">
                                     @if (schedule.Train!.Coaches!.Any())
                                     {
-                                        int classCount = 1;
                                         @foreach (var coach in schedule.Train!.Coaches!)
                                         {
                                             <a role="button" class="text-decoration-none text-black train-coach" data-bs-toggle="collapse" href="#@schedule.TrainCode-@coach.Id" aria-expanded="false" aria-controls="@schedule.TrainCode-@coach.Id" >
                                                 <div class="card" style="width:180px">
                                                     <div class="card-body d-flex flex-column  p-2">
-                                                        <div class="fs-6 text-center" style="color: #EC5B24;">Coach @classCount</div>
+                                                        <div class="fs-6 text-center" style="color: #EC5B24;">Coach @coach.CoachNo</div>
                                                         <div>Last: @Html.DisplayFor(x=>coach.NoOfSeats)</div>
                                                     </div>
                                                 </div>
                                             </a>
-                                            classCount++;
                                         }
                                     }
                                 </div>
-                                @{
-                                    int coachCount = 1;
-                                }
+                                
                                 @foreach (var coach in schedule.Train.Coaches)
                                 {
                                     <div class="collapse " id="@schedule.TrainCode-@coach.Id">
@@ -345,9 +347,11 @@
                                                                                 data-start="@schedule.Departure" 
                                                                                 data-end="@schedule.Arrival" 
                                                                                 data-cabin="0" 
-                                                                                data-coachCount="@coachCount"
-                                                                                 data-fromStation="@schedule.Route.RouteDetails.First().DepartureStationId"
-                                                                                 data-toStation="@schedule.Route.RouteDetails.Last().ArrivalStationId">
+                                                                                data-coachNo="@coach.CoachNo"
+                                                                                 data-fromStation="@schedule.Route.RouteDetails.FirstOrDefault().DepartureStationId"
+                                                                                 data-toStation="@schedule.Route.RouteDetails.LastOrDefault().ArrivalStationId"
+                                                                                 data-class="@coach.ClassCode"
+                                                                                 data-className="@coach.Class.Name">
                                                                                 <span>@count</span>
                                                                             </div>
                                                                         </div>
@@ -395,7 +399,7 @@
                                                                     </div>
                                                                 </div>
                                                                 brek = coach.NoOfCompartments * 2;
-                                                                cabinNum = 0;
+                                                                cabinNum = 1;
                                                             }
                                                             if (count % 2 == 0)
                                                             {
@@ -409,10 +413,12 @@
                                                                                     data-coach="@coach.Id" 
                                                                                     data-seat="@count" 
                                                                                     data-start="@schedule.Departure" 
-                                                                                    data-end="@schedule.Arrival" 
-                                                                                    data-coachCount="@coachCount"
-                                                                                     data-fromStation="@schedule.Route.RouteDetails.First().DepartureStationId"
-                                                                                     data-toStation="@schedule.Route.RouteDetails.Last().ArrivalStationId">
+                                                                                    data-end="@schedule.Arrival"
+                                                                                     data-coachNo="@coach.CoachNo"
+                                                                                     data-fromStation="@schedule.Route.RouteDetails.FirstOrDefault().DepartureStationId"
+                                                                                     data-toStation="@schedule.Route.RouteDetails.LastOrDefault().ArrivalStationId"
+                                                                                     data-class="@coach.ClassCode"
+                                                                                     data-className="@coach.Class.Name">
                                                                                     <span>@count</span>
                                                                                 </div>
                                                                             </div>
@@ -420,6 +426,7 @@
                                                                         </div>
                                                                     </div>
                                                                 </div>
+                                                                cabinNum++;
                                                             }
                                                             else
                                                             {
@@ -433,10 +440,12 @@
                                                                                     data-coach="@coach.Id" 
                                                                                     data-seat="@count" 
                                                                                     data-start="@schedule.Departure" 
-                                                                                    data-end="@schedule.Arrival" 
-                                                                                    data-coachCount="@coachCount"
-                                                                                     data-fromStation="@schedule.Route.RouteDetails.First().DepartureStationId"
-                                                                                     data-toStation="@schedule.Route.RouteDetails.Last().ArrivalStationId">
+                                                                                    data-end="@schedule.Arrival"
+                                                                                     data-coachNo="@coach.CoachNo"
+                                                                                     data-fromStation="@schedule.Route.RouteDetails.FirstOrDefault().DepartureStationId"
+                                                                                     data-toStation="@schedule.Route.RouteDetails.LastOrDefault().ArrivalStationId"
+                                                                                     data-class="@coach.ClassCode"
+                                                                                     data-className="@coach.Class.Name">
                                                                                     <span>@count</span>
                                                                                 </div>
                                                                             </div>
@@ -445,7 +454,7 @@
                                                                     </div>
                                                                 </div>
                                                             }
-                                                            cabinNum++;
+                                                            
                                                             brek--;
                                                             count++;
                                                         }
@@ -455,7 +464,6 @@
                                             }
                                         </div>
                                     </div>
-                                    coachCount++;
                                 }
                             </div>
                         </div>
